@@ -494,6 +494,7 @@ void PromptWidget::loadConfig()
     // Take care of one-time debugger stuff
     print(instance().debugger().autoExec().c_str());
     print(instance().debugger().cartDebug().loadConfigFile() + "\n");
+    print(instance().debugger().cartDebug().loadListFile() + "\n");
     print(instance().debugger().cartDebug().loadSymbolFile() + "\n");
     print(PROMPT);
 
